Bug 89079 - [BSW] igt/gem_concurrent_blit subcases fail
Summary: [BSW] igt/gem_concurrent_blit subcases fail
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: unspecified
Hardware: All Linux (All)
: medium normal
Assignee: Rami
QA Contact: Intel GFX Bugs mailing list
URL: http://patchwork.freedesktop.org/patc...
Whiteboard:
Keywords:
: 92937 (view as bug list)
Depends on:
Blocks:
 
Reported: 2015-02-11 08:48 UTC by lu hua
Modified: 2016-02-22 11:43 UTC (History)
3 users (show)

See Also:
i915 platform: BSW/CHT
i915 features: GEM/Other


Attachments
case list (119.53 KB, text/plain)
2015-02-11 08:48 UTC, lu hua
no flags Details

Description lu hua 2015-02-11 08:48:52 UTC
Created attachment 113341 [details]
case list

==System Environment==
--------------------------
Regression: not sure

no-working platforms: BSW

==kernel==
--------------------------
drm-intel-nightly/ad95125eaef18eebb9f47261ce3c99957f5953de
commit ad95125eaef18eebb9f47261ce3c99957f5953de
Author: Daniel Vetter <daniel.vetter@ffwll.ch>
Date:   Mon Feb 9 21:31:04 2015 +0100

    drm-intel-nightly: 2015y-02m-09d-20h-26m-16s UTC integration manifest

==Bug detailed description==
It fails in automation testing, I am unable to reproduce the fail. 
I attached the case list,gem_concurrent_blit*hang* cases have bug 88652, so disabled.

Following gem_concurrent_blit/*-forked cases also fail:
igt/gem_concurrent_blit/gpu-gtt-gpu-read-after-write-forked
igt/gem_concurrent_blit/gpu-gtt-overwrite-source-forked
igt/gem_concurrent_blit/gtt-bcs-gpu-read-after-write-forked
igt/gem_concurrent_blit/gtt-bcs-overwrite-source-forked
igt/gem_concurrent_blit/gtt-cpu-gpu-read-after-write-forked
igt/gem_concurrent_blit/gtt-cpu-overwrite-source-forked
igt/gem_concurrent_blit/gtt-cpu-overwrite-source-rev-forked
igt/gem_concurrent_blit/gtt-gtt-gpu-read-after-write-forked
igt/gem_concurrent_blit/gtt-gtt-overwrite-source-rev-forked
igt/gem_concurrent_blit/gtt-rcs-early-read-forked
igt/gem_concurrent_blit/gtt-rcs-gpu-read-after-write-forked
igt/gem_concurrent_blit/gtt-rcs-overwrite-source-forked
igt/gem_concurrent_blit/gtt-rcs-overwrite-source-rev-forked
igt/gem_concurrent_blit/gtt-wc-early-read-forked
igt/gem_concurrent_blit/gtt-wc-gpu-read-after-write-forked
igt/gem_concurrent_blit/gtt-wc-overwrite-source-forked
igt/gem_concurrent_blit/gtt-wc-overwrite-source-rev-forked
igt/gem_concurrent_blit/gttX-cpu-gpu-read-after-write-forked


clean boot system, run  time ./gem_concurrent_blit --run-subtest gpu-gtt-overwrite-source-forked, it's pass
output:
IGT-Version: 1.9-g9846e7f (x86_64) (Linux: 3.19.0_drm-intel-nightly_34f9b9_20150211+ x86_64)
using 2x512 buffers, each 1MiB
Subtest gpu-gtt-overwrite-source-forked: SUCCESS (297.045s)

real    7m12.984s
user    19m33.256s
sys     2m28.173s

clean boot system run time ./gem_concurrent_blit --run-subtest gpu-gtt-overwrite-source then run time ./gem_concurrent_blit --run-subtest gpu-gtt-overwrite-source-forked, it also pass.
root@x-bsw06:/GFX/Test/Intel_gpu_tools/intel-gpu-tools/tests# time ./gem_concurrent_blit --run-subtest gpu-gtt-overwrite-source
IGT-Version: 1.9-g9846e7f (x86_64) (Linux: 3.19.0_drm-intel-nightly_34f9b9_20150211+ x86_64)
using 2x512 buffers, each 1MiB
Subtest gpu-gtt-overwrite-source: SUCCESS (31.874s)

real    2m48.328s
user    0m31.793s
sys     2m15.811s
root@x-bsw06:/GFX/Test/Intel_gpu_tools/intel-gpu-tools/tests# time ./gem_concurrent_blit --run-subtest gpu-gtt-overwrite-source-forked
IGT-Version: 1.9-g9846e7f (x86_64) (Linux: 3.19.0_drm-intel-nightly_34f9b9_20150211+ x86_64)
using 2x512 buffers, each 1MiB
Subtest gpu-gtt-overwrite-source-forked: SUCCESS (297.138s)

real    7m13.012s
user    19m33.916s
sys     2m28.668s

test log:
@test: Intel_gpu_tools/igt_gem_concurrent_blit_gpu-gtt-overwrite-source-forked
info: @@@Returncode: 0

test case start at: Mon Feb  9 12:20:11 2015
test case end at:   Mon Feb  9 12:24:55 2015

Errors:


Dmesg:


Output:
             command   pid dev master a   uid      magic
Test Environment check: Succeeded.
[1/1] fail: 1 |
[1/1] fail: 1 /


Thank you for running Piglit!
Results have been written to /GFX/Test/Piglit/piglit/t
{
    "results_version": 2,
    "uname": "Linux x-bsw08 3.19.0_drm-intel-nightly_ad9512_20150210+ #278 SMP Tue Feb 10 11:27:22 CST 2015 x86_64 x86_64 x86_64 GNU/Linux\n",
    "time_elapsed": 278.3947551250458,
    "tests": {
        "igt/gem_concurrent_blit/gpu-gtt-overwrite-source-forked": {
            "returncode": 99,
            "err": "(gem_concurrent_blit:5540) CRITICAL: Test assertion failure function cpu_cmp_bo, file gem_concurrent_blit.c:228:\n(gem_concurrent_blit:5540) CRITICAL: Failed assertion: *vaddr++ == val\n(gem_concurrent_blit:5540) CRITICAL: error: 0x48c68948 != 0x18\n",
            "environment": "PIGLIT_SOURCE_DIR=\"/GFX/Test/Piglit/piglit\" PIGLIT_PLATFORM=\"mixed_glx_egl\"",
            "command": "/GFX/Test/Intel_gpu_tools/intel-gpu-tools/tests/gem_concurrent_blit --run-subtest gpu-gtt-overwrite-source-forked",
            "result": "fail",
            "time": 278.21622705459595,
            "out": "IGT-Version: 1.9-gbef692d (x86_64) (Linux: 3.19.0_drm-intel-nightly_ad9512_20150210+ x86_64)\nusing 2x512 buffers, each 1MiB\nchild 0 failed with exit status 99\nSubtest gpu-gtt-overwrite-source-forked: FAIL (146.106s)\n"


==Reproduce steps==
---------------------------- 
1. run the case list as the attachment
Comment 1 lu hua 2015-02-12 06:02:18 UTC
Following cases also fail:
igt/gem_concurrent_blit/gttX-wc-overwrite-source-rev-forked
igt/gem_concurrent_blit/gttX-wc-overwrite-source-forked
igt/gem_concurrent_blit/gttX-wc-gpu-read-after-write-forked
igt/gem_concurrent_blit/gttX-wc-early-read-forked
Comment 2 cprigent 2015-10-20 06:36:44 UTC
With fresh setup following tests are fail:
igt@gem_concurrent_blit@gtt-blt-early-read-forked 	
igt@gem_concurrent_blit@gtt-blt-gpu-read-after-write-forked 	
igt@gem_concurrent_blit@gtt-blt-intermix-bcs-forked 	
igt@gem_concurrent_blit@gtt-blt-intermix-both-forked 	
igt@gem_concurrent_blit@gtt-blt-intermix-rcs-forked 	
igt@gem_concurrent_blit@gtt-blt-overwrite-source-forked 	
igt@gem_concurrent_blit@gtt-blt-overwrite-source-read-rcs-forked 	
igt@gem_concurrent_blit@gtt-blt-read-read-bcs-forked 	
igt@gem_concurrent_blit@gtt-blt-read-read-rcs-forked 	
igt@gem_concurrent_blit@gtt-render-early-read-forked 	
igt@gem_concurrent_blit@gtt-render-intermix-bcs-forked 		
igt@gem_concurrent_blit@gtt-render-intermix-rcs-forked 		
igt@gem_concurrent_blit@gtt-render-overwrite-source-forked 		
igt@gem_concurrent_blit@gtt-render-overwrite-source-rev-forked 	
igt@gem_concurrent_blit@gtt-render-read-read-bcs-forked 		
igt@gem_concurrent_blit@gtt-render-read-read-rcs-forked 		
igt@gem_concurrent_blit@gttx-blt-early-read-forked 		
igt@gem_concurrent_blit@gttx-blt-gpu-read-after-write-forked 		
igt@gem_concurrent_blit@gttx-blt-intermix-rcs-forked 		
igt@gem_concurrent_blit@gttx-blt-overwrite-source-read-bcs-forked 		
igt@gem_concurrent_blit@gttx-render-gpu-read-after-write-forked 		
igt@gem_concurrent_blit@gttx-render-overwrite-source-forked

Platform: Braswell M
CPU : Intel(R) Celeron N3060 1.60GHz @ 1.6 GHz (family: 6, model: 76 stepping: 4)
SoC : BSW D0
QDF : K6XC
CRB : BRASWELL RVP Fab2
Mandatory Reworks : All 
Feature Reworks: F28, F32, F33, F35, F37
Optional reworks : O-01a; O-02, O-03
BIOS : BRAS.X64.B084.R00.1508310642
TXE FW : 2.0.0.2073
Ksc : 1.08

Linux distribution: Ubuntu 14.04 LTS 64 bits
kernel 4.3.0-rc5-drm-intel-nightly+ 819f710081d7ea116b9b44a9264061d2c030f009 from git://anongit.freedesktop.org/drm-intel
Mesa - 11.0.3 from http://cgit.freedesktop.org/mesa/mesa/
xf86-video-intel - 2.99.917 from http://cgit.freedesktop.org/xorg/driver/xf86-video-intel/
Libdrm - 2.4.65 from http://cgit.freedesktop.org/mesa/drm/
Libva - 1.6.1 from http://cgit.freedesktop.org/libva/
vaapi intel-driver - 1.6.1 from http://cgit.freedesktop.org/vaapi/intel-driver
Cairo - 1.14.2 from http://cgit.freedesktop.org/cairo
Xorg Xserver - 1.17.2 from http://cgit.freedesktop.org/xorg/xserver

Kernel commit 819f710081d7ea116b9b44a9264061d2c030f009
Author: Daniel Vetter <daniel.vetter@ffwll.ch>
Date:   Wed Oct 14 19:05:17 2015 +0200
drm-intel-nightly: 2015y-10m-14d-17h-04m-36s UTC integration manifest
Comment 3 Chris Wilson 2015-10-23 16:07:29 UTC
Can you please try with maxcpus=0 on the kernel commandline?
Comment 4 Chris Wilson 2015-10-23 17:53:06 UTC
http://patchwork.freedesktop.org/patch/62807/
Comment 5 cprigent 2015-10-26 16:07:41 UTC
Assigned to Rami to check.
Comment 6 Chris Wilson 2015-11-13 11:40:01 UTC
*** Bug 92937 has been marked as a duplicate of this bug. ***
Comment 7 Rami 2015-11-16 15:50:25 UTC
This tests are fail with last setup:

igt/gem_concurrent_blit/gtt-blt-overwrite-source-forked
igt/gem_concurrent_blit/gtt-blt-overwrite-source-read-bcs-forked
igt/gem_concurrent_blit/gtt-render-intermix-rcs-forked
igt/gem_concurrent_blit/gtt-render-read-read-bcs-forked
igt/gem_concurrent_blit/gttX-blt-overwrite-source-read-bcs-forked

kernel 4.3.0-nightly+
cairo: (HEAD, tag: 1.14.2) 93422b3cb5e0ef8104b8194c8873124ce2f5ea2d from git://git.freedesktop.org/git/cairo
drm: (HEAD, tag: libdrm-2.4.65, tag: 2.4.65) c3496167637e35cf8a52d5e7e53a412e79d80db0 from git://git.freedesktop.org/git/mesa/drm
intel-driver: (HEAD, tag: 1.6.1, origin/v1.6-branch) 35858c69166b845c59ca32e19a3dbb0b758df209 from git://git.freedesktop.org/git/vaapi/intel-driver
libva: (HEAD, tag: libva-1.6.1, origin/v1.6-branch) 613eb962b45fbbd1526d751e88e0d8897af6c0e0 from git://git.freedesktop.org/git/vaapi/libva
mesa: (HEAD, tag: mesa-11.0.5) ee57c22141c42d9b511a7dfa5971c4428cd1c6e7 from git://git.freedesktop.org/git/mesa/mesa
xf86-video-intel: (HEAD, tag: 2.99.917) baec802b21387d04aebb10ac29e719a1800c5aa0 from git://git.freedesktop.org/git/xorg/driver/xf86-video-intel
xserver: (HEAD, tag: xorg-server-1.17.2) 2123f7682d522619f101b05fb75efa75dabbe371 from git://git.freedesktop.org/git/xorg/xserver

* Tools *
intel-gpu-tools: (HEAD, origin/master, origin/HEAD, master) c8beadb811bdc2b9c21f95144852f3e55867b546 from git://git.freedesktop.org/git/xorg/app/intel-gpu-tools
Comment 8 Rami 2015-11-19 13:21:29 UTC
Reproduced on BSW with regression for this tests:
igt@gem_concurrent_blit@gtt-render-intermix-both-forked
igt@gem_concurrent_blit@gtt-render-overwrite-source-one-forked
igt@gem_concurrent_blit@gttx-blt-intermix-both-forked

setup:

Hardware:
Platform: Braswell M 
CPU : Intel(R) Celeron N3060 1.60GHz @ 1.6 GHz (family: 6, model: 76 stepping: 4)
SoC : BSW C0
QDF : K6XC
CRB : BRASWELL RVP Fab2
Mandatory Reworks : All Feature Reworks: F28, F32, F33, F35, F37
Optional reworks : O-01a; O-02, O-03 

Software:
Linux distribution: Ubuntu 15.04 LTS 64 bits 
BIOS : BRAS.X64.B084.R00.1508310642
TXE FW : 2.0.0.2073
Ksc : 1.08
kernel  drm-intel-nightly: 2015y-11m-12d-15h-35m-53s UTC integration manifest
commit 4c2531304c0a2f36f6b2cce2add5b5b2bd3fd893
Author: Jani Nikula <jani.nikula@intel.com>
Date:   Thu Nov 12 17:36:12 2015 +0200
cairo: (HEAD, tag: 1.14.2) 93422b3cb5e0ef8104b8194c8873124ce2f5ea2d from git://git.freedesktop.org/git/cairo
drm: (HEAD, tag: libdrm-2.4.65, tag: 2.4.65) c3496167637e35cf8a52d5e7e53a412e79d80db0 from git://git.freedesktop.org/git/mesa/drm
intel-driver: (HEAD, tag: 1.6.1, origin/v1.6-branch) 35858c69166b845c59ca32e19a3dbb0b758df209 from git://git.freedesktop.org/git/vaapi/intel-driver
libva: (HEAD, tag: libva-1.6.1, origin/v1.6-branch) 613eb962b45fbbd1526d751e88e0d8897af6c0e0 from git://git.freedesktop.org/git/vaapi/libva
mesa: (HEAD, tag: mesa-11.0.5) ee57c22141c42d9b511a7dfa5971c4428cd1c6e7 from git://git.freedesktop.org/git/mesa/mesa
xf86-video-intel: (HEAD, tag: 2.99.917) baec802b21387d04aebb10ac29e719a1800c5aa0 from git://git.freedesktop.org/git/xorg/driver/xf86-video-intel
xserver: (HEAD, tag: xorg-server-1.17.2) 2123f7682d522619f101b05fb75efa75dabbe371 from git://git.freedesktop.org/git/xorg/xserver

* Tools *
intel-gpu-tools: (HEAD, origin/master, origin/HEAD, master) e42936d86b52c6804da41755df7155cafded5eb2 from git://git.freedesktop.org/git/xorg/app/intel-gpu-tools
Comment 9 Chris Wilson 2015-11-19 13:25:50 UTC
Still waiting for test feedback on maxcpus and the patch which has since been merged,

commit 5bab6f60cb4d1417ad7c599166bcfec87529c1a2
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Fri Oct 23 18:43:32 2015 +0100

    drm/i915: Serialise updates to GGTT with access through GGTT on Braswell
Comment 10 Rami 2015-11-20 10:46:31 UTC
The patch does not apply.
with maxcpus=0 we can't boot.
I tried with maxcpus=1 and all tests pass
Comment 11 Chris Wilson 2015-11-20 11:01:20 UTC
If your kernel is uptodate (drm-intel-nightly) all you need do is now test with a normal boot as my proposed fix has already been applied.
Comment 12 Rami 2015-11-20 15:52:09 UTC
Test pass with the last setup:
Hardware:
Platform: Braswell M 
CPU : Intel(R) Celeron N3060 1.60GHz @ 1.6 GHz (family: 6, model: 76 stepping: 4)
SoC : BSW C0
QDF : K6XC
CRB : BRASWELL RVP Fab2
Mandatory Reworks : All Feature Reworks: F28, F32, F33, F35, F37
Optional reworks : O-01a; O-02, O-03 

Software:
Linux distribution: Ubuntu 15.04 LTS 64 bits 
BIOS : BRAS.X64.B084.R00.1508310642
TXE FW : 2.0.0.2073
Ksc : 1.08
kernel drm-intel-nightly: 2015y-11m-19d-16h-51m-40s UTC integration manifest
commit 0ffc902f01780eea9bd497435f04883b1c071871
Author: Daniel Vetter <daniel.vetter@ffwll.ch>
Date:   Thu Nov 19 17:52:23 2015 +0100

cairo: (HEAD, tag: 1.14.2) 93422b3cb5e0ef8104b8194c8873124ce2f5ea2d from git://git.freedesktop.org/git/cairo
drm: (HEAD, tag: libdrm-2.4.65, tag: 2.4.65) c3496167637e35cf8a52d5e7e53a412e79d80db0 from git://git.freedesktop.org/git/mesa/drm
intel-driver: (HEAD, tag: 1.6.1, origin/v1.6-branch) 35858c69166b845c59ca32e19a3dbb0b758df209 from git://git.freedesktop.org/git/vaapi/intel-driver
libva: (HEAD, tag: libva-1.6.1, origin/v1.6-branch) 613eb962b45fbbd1526d751e88e0d8897af6c0e0 from git://git.freedesktop.org/git/vaapi/libva
mesa: (HEAD, tag: mesa-11.0.5) ee57c22141c42d9b511a7dfa5971c4428cd1c6e7 from git://git.freedesktop.org/git/mesa/mesa
xf86-video-intel: (HEAD, tag: 2.99.917) baec802b21387d04aebb10ac29e719a1800c5aa0 from git://git.freedesktop.org/git/xorg/driver/xf86-video-intel
xserver: (HEAD, tag: xorg-server-1.17.2) 2123f7682d522619f101b05fb75efa75dabbe371 from git://git.freedesktop.org/git/xorg/xserver

* Tools *
intel-gpu-tools: (HEAD, origin/master, origin/HEAD, master) b718f50f92cf7ed825c90ff54940cb155d110a2c from git://git.freedesktop.org/git/xorg/app/intel-gpu-tools
Comment 13 cprigent 2015-12-09 16:33:08 UTC
Following tests are fail on BSW-M with Q4 stack release:
igt@gem_concurrent_blit@gtt-blt-early-read-forked
igt@gem_concurrent_blit@gtt-blt-gpu-read-after-write-forked
igt@gem_concurrent_blit@gtt-blt-intermix-both-forked
igt@gem_concurrent_blit@gtt-blt-intermix-rcs-forked
igt@gem_concurrent_blit@gtt-blt-overwrite-source-forked
igt@gem_concurrent_blit@gtt-blt-overwrite-source-read-rcs-forked
igt@gem_concurrent_blit@gtt-blt-read-read-bcs-forked
igt@gem_concurrent_blit@gtt-blt-write-read-bcs-forked
igt@gem_concurrent_blit@gtt-blt-write-read-rcs-forked
igt@gem_concurrent_blit@gtt-render-early-read-forked
igt@gem_concurrent_blit@gtt-render-gpu-read-after-write-forked
igt@gem_concurrent_blit@gtt-render-intermix-bcs-forked
igt@gem_concurrent_blit@gtt-render-intermix-both-forked
igt@gem_concurrent_blit@gtt-render-intermix-rcs-forked
igt@gem_concurrent_blit@gtt-render-overwrite-source-forked
igt@gem_concurrent_blit@gtt-render-overwrite-source-read-bcs-forked
igt@gem_concurrent_blit@gtt-render-overwrite-source-read-rcs-forked
igt@gem_concurrent_blit@gtt-render-overwrite-source-rev-forked
igt@gem_concurrent_blit@gtt-render-read-read-bcs-forked
igt@gem_concurrent_blit@gtt-render-read-read-rcs-forked
igt@gem_concurrent_blit@gtt-render-write-read-rcs-forked
igt@gem_concurrent_blit@gttx-blt-early-read-forked
igt@gem_concurrent_blit@gttx-blt-gpu-read-after-write-forked
igt@gem_concurrent_blit@gttx-blt-intermix-bcs-forked
igt@gem_concurrent_blit@gttx-blt-intermix-rcs-forked
igt@gem_concurrent_blit@gttx-blt-overwrite-source-read-bcs-forked
igt@gem_concurrent_blit@gttx-blt-overwrite-source-read-rcs-forked
igt@gem_concurrent_blit@gttx-blt-overwrite-source-rev-forked
igt@gem_concurrent_blit@gttx-blt-read-read-bcs-forked
igt@gem_concurrent_blit@gttx-blt-write-read-bcs-forked
igt@gem_concurrent_blit@gttx-render-overwrite-source-forked
igt@gem_concurrent_blit@gttx-render-read-read-bcs-forked
igt@gem_concurrent_blit@gttx-render-read-read-rcs-forked

Hardware:
Motherboard: Braswell CRB
cpu model name : Intel(R) Celeron(R) CPU N3060 @ 1.60GHz
cpu model : 76
cpu family : 6
Graphic card: Device 22b1 (rev 31)
Software:
Linux distribution: Ubuntu 15.10 LTS 64 bits
Kernel: 4.3 mainline from https://git.kernel.org/cgit/linux/kernel/git/torvalds/linux.git/log/?id=refs/tags/v4.3
Bios BRAS.X64.B088.R00.1510270350
xorg-server-1.18.0 from http://cgit.freedesktop.org/xorg/xserver
libdrm-2.4.65 from http://cgit.freedesktop.org/mesa/drm/
xf86-video-intel 2.99.917 from http://cgit.freedesktop.org/xorg/driver/xf86-video-intel/
mesa-11.0.4 from http://cgit.freedesktop.org/mesa/mesa/
libva-1.6.2.pre1 from http://cgit.freedesktop.org/libva/
vaapi-intel-driver 1.6.2.pre1 from http://cgit.freedesktop.org/vaapi/intel-driver
cairo 1.14.4 from http://cgit.freedesktop.org/cairo
IGT 1.13
Comment 14 cprigent 2016-02-22 11:39:26 UTC
It is fixed on drm-intel-nightly.
Next GFX stack release will also contain the fix.
So closed.
Comment 15 Chris Wilson 2016-02-22 11:43:57 UTC
Presumably you will remember to file a bug report for the current failures in gem_concurrent_blit + braswell?


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.